; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo.c_vo_wait_default.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo.c_vo_wait_default.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.vo_internal* }
%struct.vo_internal = type { i32, i32, i32 }
%struct.timespec = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vo_wait_default(%struct.vo* %0, i32 %1) #0 {
  %3 = alloca %struct.vo*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.vo_internal*, align 8
  %6 = alloca %struct.timespec, align 4
  store %struct.vo* %0, %struct.vo** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.vo*, %struct.vo** %3, align 8
  %8 = getelementptr inbounds %struct.vo, %struct.vo* %7, i32 0, i32 0
  %9 = load %struct.vo_internal*, %struct.vo_internal** %8, align 8
  store %struct.vo_internal* %9, %struct.vo_internal** %5, align 8
  %10 = load %struct.vo_internal*, %struct.vo_internal** %5, align 8
  %11 = getelementptr inbounds %struct.vo_internal, %struct.vo_internal* %10, i32 0, i32 0
  %12 = call i32 @pthread_mutex_lock(i32* %11)
  %13 = load %struct.vo_internal*, %struct.vo_internal** %5, align 8
  %14 = getelementptr inbounds %struct.vo_internal, %struct.vo_internal* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %26, label %17

17:                                               ; preds = %2
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @mp_time_us_to_timespec(i32 %18)
  %20 = getelementptr inbounds %struct.timespec, %struct.timespec* %6, i32 0, i32 0
  store i32 %19, i32* %20, align 4
  %21 = load %struct.vo_internal*, %struct.vo_internal** %5, align 8
  %22 = getelementptr inbounds %struct.vo_internal, %struct.vo_internal* %21, i32 0, i32 1
  %23 = load %struct.vo_internal*, %struct.vo_internal** %5, align 8
  %24 = getelementptr inbounds %struct.vo_internal, %struct.vo_internal* %23, i32 0, i32 0
  %25 = call i32 @pthread_cond_timedwait(i32* %22, i32* %24, %struct.timespec* %6)
  br label %26

26:                                               ; preds = %17, %2
  %27 = load %struct.vo_internal*, %struct.vo_internal** %5, align 8
  %28 = getelementptr inbounds %struct.vo_internal, %struct.vo_internal* %27, i32 0, i32 0
  %29 = call i32 @pthread_mutex_unlock(i32* %28)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @mp_time_us_to_timespec(i32) #1

declare dso_local i32 @pthread_cond_timedwait(i32*, i32*, %struct.timespec*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
